Bug 32172 - regression: lost checkboxes FILEOPEN, FORMATTING
Summary: regression: lost checkboxes FILEOPEN, FORMATTING
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 RC1
Hardware: Other All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-07 02:10 UTC by Andras Timar
Modified: 2011-01-13 00:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
missing checkboxes in LibreOffice 3.3 RC1 (37.07 KB, image/png)
2010-12-07 02:10 UTC, Andras Timar
Details
sample document (240.81 KB, application/vnd.oasis.opendocument.text)
2010-12-07 02:11 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2010-12-07 02:10:17 UTC
Created attachment 40862 [details]
missing checkboxes in LibreOffice 3.3 RC1

Checkboxes do not appear in LibreOffice 3.3 RC1 while Go-OO 3.2.1 was OK in this regard. See the screenshot. I attached the sample document.
Comment 1 Andras Timar 2010-12-07 02:11:37 UTC
Created attachment 40863 [details]
sample document
Comment 2 Katarina Behrens 2010-12-07 02:22:24 UTC
Cedric: can you have a look here?
Comment 3 Rainer Bielefeld Retired 2010-12-07 03:31:47 UTC
Not reproducible, neither "Ooo 3.1.1 WIN XP DE [OOO310m19 (Build 9420)]" nor OOo3.4.0-dev show checkboxes in sample document.
Comment 4 Andras Timar 2010-12-07 03:42:40 UTC
(In reply to comment #3)
> Not reproducible, neither "Ooo 3.1.1 WIN XP DE [OOO310m19 (Build 9420)]" nor
> OOo3.4.0-dev show checkboxes in sample document.

Rainer: would you mind to try it on LibreOffice 3.3 RC1? I reported a bug of LibreOffice, not of Ooo 3.1.1 WIN XP DE or OOo3.4.0-dev. Why UNCONFIRMED?
Comment 5 Rainer Bielefeld Retired 2010-12-07 03:56:42 UTC
Of course I tried "LibreOffice 3.3.0 RC1 - WIN XP German UI  [OOO330m17 (build 3.3.0.1)]", please excuse me, I forgot to mention. I can confirm the effect (no checkboxes visible) for all 3 tested versions, but currently the result seems to direct to a problem with your document or Go-OOo, not with LibO. Additionally I can't see that problem in any of my documents with RC1.

Can you contribute a step by step instruction how to reproduce that with new documents "from the scratch"?
Comment 6 Istvan Varga 2010-12-07 04:05:55 UTC
I submitted this bug in a hungarian forum, the sample document is mine. The document was originally in Word format until I converted it to ODF a few years ago. I never had this problem until now.
Comment 7 Andras Timar 2010-12-07 04:09:48 UTC
<field:fieldmark text:name="__Fieldmark__405_1342447150" field:type="ecma.office-open-xml.field.FORMCHECKBOX">
  <field:param field:name="name" field:value="Jelölő9"/>
  <field:param field:name="helpText" field:value=""/>
  <field:param field:name="checked" field:value="off"/>
</field:fieldmark>

Support of field type "ecma.office-open-xml.field.FORMCHECKBOX" may be broken.
Comment 8 Istvan Varga 2010-12-07 04:31:58 UTC
(In reply to comment #5)

> Can you contribute a step by step instruction how to reproduce that with new
> documents "from the scratch"?

I don't think it's the normal attitude. Something happened that made a good
document corrupted. I have many of these files and I can't do them again from
scratch. I'm using OpenOffice/OxygenOffice for 4 years now without major
problems, and I intend to use it in the future. I'm opening/saving these
documents for a long time without a problem, and I also do it now with
OpenOffice 3.2.1 without a problem.

Changing an older MS Word version to newer one never made me afraid of document
corruption because everything looked like as it did in the older one. I know
that OOO/LibO have much to develop (ex. it's very slow even on a current PC),
but the "problem-isn't-a-promblem" coudn't be the way...

Please ask me if you need more details!
Comment 9 Istvan Varga 2010-12-09 01:49:58 UTC
I have the same issue with OpenOffice 3.3.0 RC7.
Comment 10 Cédric Bosdonnat 2010-12-09 02:16:07 UTC
(In reply to comment #7)
> <field:fieldmark text:name="__Fieldmark__405_1342447150"
> field:type="ecma.office-open-xml.field.FORMCHECKBOX">
>   <field:param field:name="name" field:value="Jelölő9"/>
>   <field:param field:name="helpText" field:value=""/>
>   <field:param field:name="checked" field:value="off"/>
> </field:fieldmark>
> 
> Support of field type "ecma.office-open-xml.field.FORMCHECKBOX" may be broken.

In fact, this was the name of the field before the patch was upstreamed from Go-oo to OOo. This name has been changed into "vnd.oasis.opendocument.field.FORMCHECKBOX".

I'm not sure it would be nice to keep that old temporary name... but you can fix your document by simply:
  1/ unzip it
  2/ sed -i "s:ecma.office-open-xml.field.FORMCHECKBOX:vnd.oasis.opendocument.field.FORMCHECKBOX:" content.xml
  3/ rezip all

I'm marking it as WONTFIX, feel free to reopen if this is affecting a lot more documents and would need to add some code for compatibility.
Comment 11 Cédric Bosdonnat 2010-12-09 02:33:14 UTC
Well I even fixed it quickly for all the three kinds of fields. Import will read the fields correctly and save will store the new name:

http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=ba4dfeb67f846665779bf1524c23499616da61f2
Comment 12 Andras Timar 2010-12-09 04:29:43 UTC
Thanks, you IMHO you did the Right Thing™. Any chance to have it in libreoffice-3-3, too?
Comment 13 Cédric Bosdonnat 2010-12-09 05:10:35 UTC
Caolan, what do you think of cherry-picking this patch to 3.3?
Comment 14 Caolán McNamara 2010-12-09 05:25:31 UTC
Looks good to me, I can't see any danger if you cherrypick it back.
Comment 15 Cédric Bosdonnat 2010-12-09 05:56:36 UTC
Ok, that backported to 3.3 then.
Comment 16 Istvan Varga 2010-12-09 09:08:10 UTC
(In reply to comment #10)

> I'm marking it as WONTFIX, feel free to reopen if this is affecting a lot more
> documents and would need to add some code for compatibility.

I don't think I'm the only one with this problem. I have hundreds of this type of docs. If I could convert them easily I would do it. I mean "convert *.*", not one-by-one.

Sorry guys, what does this patch mean? New version will open these docs corretly and save them with new field name, am I right?
Comment 17 Cédric Bosdonnat 2010-12-10 00:50:38 UTC
(In reply to comment #16)
> (In reply to comment #10)
> 
> > I'm marking it as WONTFIX, feel free to reopen if this is affecting a lot more
> > documents and would need to add some code for compatibility.
> 
> I don't think I'm the only one with this problem. I have hundreds of this type
> of docs. If I could convert them easily I would do it. I mean "convert *.*",
> not one-by-one.

That's why I finally hacked it quickly ;)

> Sorry guys, what does this patch mean? New version will open these docs
> corretly and save them with new field name, am I right?

You are right.
Comment 18 Istvan Varga 2010-12-10 01:07:04 UTC
(In reply to comment #17)

> > ...New version will open these docs
> > corretly and save them with new field name, am I right?

> You are right.

I pleasantly surprised again in the free community, thank you for your fluency! Have a good work!
Comment 19 sophie 2011-01-13 00:49:50 UTC
Verified - Closed - Sophie