fdo#32172: backward import compatibility for old go-oo enhanced fields names