xmloff/source/text/XMLTextMarkImportContext.cxx
@@ -147,11 +147,13 @@ static const char *lcl_getFormFieldmarkName(rtl::OUString &name)
 {
     static const char sCheckbox[]=ODF_FORMCHECKBOX;
     static const char sFormDropDown[]=ODF_FORMDROPDOWN;
-    if (name.compareToAscii("msoffice.field.FORMCHECKBOX")==0)
+    if (name.compareToAscii("msoffice.field.FORMCHECKBOX")==0 ||
+            name.compareToAscii("ecma.office-open-xml.field.FORMCHECKBOX")==0)
         return sCheckbox;
     else if (name.compareToAscii(ODF_FORMCHECKBOX)==0)
         return sCheckbox;
-    if (name.compareToAscii(ODF_FORMDROPDOWN)==0)
+    if (name.compareToAscii(ODF_FORMDROPDOWN)==0 ||
+            name.compareToAscii("ecma.office-open-xml.field.FORMDROPDOWN")==0)
         return sFormDropDown;
     else
         return NULL;
@@ -160,7 +162,8 @@ static const char *lcl_getFormFieldmarkName(rtl::OUString &name)
 static rtl::OUString lcl_getFieldmarkName(rtl::OUString &name)
 {
     static const char sFormtext[]=ODF_FORMTEXT;
-    if (name.compareToAscii("msoffice.field.FORMTEXT")==0)
+    if (name.compareToAscii("msoffice.field.FORMTEXT")==0 ||
+            name.compareToAscii("ecma.office-open-xml.field.FORMTEXT")==0)
         return rtl::OUString::createFromAscii(sFormtext);
     else if (name.compareToAscii(ODF_FORMTEXT)==0)
         return rtl::OUString::createFromAscii(sFormtext);
